Bug 1727953 - Fix dead code flag for Wasm rethrow r=rhunt

Differential Revision: https://phabricator.services.mozilla.com/D124281